postgresql-mysql-fdw (2.1.2-1) unstable; urgency=medium

  * New upstream version with 9.5 support.

 -- Christoph Berg <myon@debian.org>  Fri, 22 Jan 2016 19:11:11 +0100

postgresql-mysql-fdw (2.0.1-1) unstable; urgency=low

  * Initial release (Closes: #785453).

 -- Markus Wanner <markus.wanner@datahouse.ch>  Sun, 13 Sep 2015 21:12:59 +0200